--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -7,7 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Analysis notebook\n"
+    "# Analysis notebook\n",
+    "# How to Build a Contender: Analyzing What Makes Top College Teams of the Last Five Years Elite \n",
+    "# 2021–2025"
    ]
   }
  ],
