--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -9,13 +9,32 @@
    "source": [
     "# Analysis notebook\n",
     "# How to Build a Contender: Analyzing What Makes Top College Teams of the Last Five Years Elite \n",
-    "# 2021–2025"
+    "# 2021–2025\n",
+    "\n",
+    "# Import libraries\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af1bbe8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
