--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "215f009e",
    "metadata": {},
    "outputs": [],
@@ -14,16 +14,250 @@
     "# Import libraries\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "af1bbe8a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# File paths\n",
+    "folder_path = \"data/raw\"\n",
+    "file_names = [\"cbb21.csv\", \"cbb22.csv\", \"cbb23.csv\", \"cbb24.csv\", \"cbb25.csv\"]\n",
+    "season_map = {\n",
+    "    \"cbb21.csv\": 2021,\n",
+    "    \"cbb22.csv\": 2022,\n",
+    "    \"cbb23.csv\": 2023,\n",
+    "    \"cbb24.csv\": 2024,\n",
+    "    \"cbb25.csv\": 2025\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f5dc6727",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load and tag each DataFrame with its season\n",
+    "dfs = []\n",
+    "for file in file_names:\n",
+    "    path = os.path.join(folder_path, file)\n",
+    "    df = pd.read_csv(path)\n",
+    "    df[\"Season\"] = season_map[file]\n",
+    "    dfs.append(df)\n",
+    "    \n",
+    "# Combine all years into a single DataFrame\n",
+    "combined_df = pd.concat(dfs, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dd3d2823",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TEAM</th>\n",
+       "      <th>CONF</th>\n",
+       "      <th>G</th>\n",
+       "      <th>W</th>\n",
+       "      <th>ADJOE</th>\n",
+       "      <th>ADJDE</th>\n",
+       "      <th>BARTHAG</th>\n",
+       "      <th>EFG_O</th>\n",
+       "      <th>EFG_D</th>\n",
+       "      <th>TOR</th>\n",
+       "      <th>...</th>\n",
+       "      <th>POSTSEASON</th>\n",
+       "      <th>SEED</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>EFGD_D</th>\n",
+       "      <th>EFG%</th>\n",
+       "      <th>EFGD%</th>\n",
+       "      <th>RK</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>3PR</th>\n",
+       "      <th>3PRD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Michigan</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>24</td>\n",
+       "      <td>20</td>\n",
+       "      <td>118.1</td>\n",
+       "      <td>91.1</td>\n",
+       "      <td>0.9521</td>\n",
+       "      <td>54.9</td>\n",
+       "      <td>44.9</td>\n",
+       "      <td>16.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>E8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Baylor</td>\n",
+       "      <td>B12</td>\n",
+       "      <td>24</td>\n",
+       "      <td>22</td>\n",
+       "      <td>123.2</td>\n",
+       "      <td>94.5</td>\n",
+       "      <td>0.9548</td>\n",
+       "      <td>57.5</td>\n",
+       "      <td>49.1</td>\n",
+       "      <td>17.6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Champions</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>29</td>\n",
+       "      <td>23</td>\n",
+       "      <td>117.7</td>\n",
+       "      <td>90.4</td>\n",
+       "      <td>0.9539</td>\n",
+       "      <td>55.6</td>\n",
+       "      <td>46.6</td>\n",
+       "      <td>18.2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>R32</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gonzaga</td>\n",
+       "      <td>WCC</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>125.4</td>\n",
+       "      <td>89.8</td>\n",
+       "      <td>0.9791</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>47.5</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2ND</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>29</td>\n",
+       "      <td>21</td>\n",
+       "      <td>123.5</td>\n",
+       "      <td>95.7</td>\n",
+       "      <td>0.9491</td>\n",
+       "      <td>54.6</td>\n",
+       "      <td>48.3</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>R32</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       TEAM CONF   G   W  ADJOE  ADJDE  BARTHAG  EFG_O  EFG_D   TOR  ...  \\\n",
+       "0  Michigan  B10  24  20  118.1   91.1   0.9521   54.9   44.9  16.3  ...   \n",
+       "1    Baylor  B12  24  22  123.2   94.5   0.9548   57.5   49.1  17.6  ...   \n",
+       "2  Illinois  B10  29  23  117.7   90.4   0.9539   55.6   46.6  18.2  ...   \n",
+       "3   Gonzaga  WCC  26  26  125.4   89.8   0.9791   61.0   47.5  16.1  ...   \n",
+       "4      Iowa  B10  29  21  123.5   95.7   0.9491   54.6   48.3  13.3  ...   \n",
+       "\n",
+       "   POSTSEASON  SEED  Season  EFGD_D  EFG%  EFGD%  RK  Team  3PR  3PRD  \n",
+       "0          E8   1.0    2021     NaN   NaN    NaN NaN   NaN  NaN   NaN  \n",
+       "1   Champions   1.0    2021     NaN   NaN    NaN NaN   NaN  NaN   NaN  \n",
+       "2         R32   1.0    2021     NaN   NaN    NaN NaN   NaN  NaN   NaN  \n",
+       "3         2ND   1.0    2021     NaN   NaN    NaN NaN   NaN  NaN   NaN  \n",
+       "4         R32   2.0    2021     NaN   NaN    NaN NaN   NaN  NaN   NaN  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_df.head()"
+   ]
   }
  ],
  "metadata": {
@@ -33,7 +267,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
