--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "215f009e",
    "metadata": {},
    "outputs": [],
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "af1bbe8a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# File paths\n",
-    "folder_path = \"data/raw\"\n",
+    "folder_path = \"../data/raw\"\n",
     "file_names = [\"cbb21.csv\", \"cbb22.csv\", \"cbb23.csv\", \"cbb24.csv\", \"cbb25.csv\"]\n",
     "season_map = {\n",
     "    \"cbb21.csv\": 2021,\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f5dc6727",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "dd3d2823",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "99831371",
    "metadata": {},
    "outputs": [
