--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "99831371",
    "metadata": {},
    "outputs": [
@@ -96,6 +96,20 @@
     "clean_df.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"✅ Cleaned data saved to: {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "892642e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read cleaned csv\n",
+    "df = pd.read_csv(\"data/processed/cleaned_cbb_2021_2025.csv\")\n",
+    "\n",
+    "# Flagging elite teams\n",
+    "df[\"Elite_Team\"] = ((df[\"SEED\"] <= 4) | (df[\"BARTHAG\"] >= 0.95)).astype(int)"
    ]
   }
  ],
