--- a/notebooks/hospital_analysis.ipynb
+++ b/notebooks/hospital_analysis.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "b61d12fb",
    "metadata": {},
    "outputs": [],
@@ -25,205 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "50db19e2",
+   "execution_count": 7,
+   "id": "c1fced9e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>case_id</th>\n",
-       "      <th>Hospital_code</th>\n",
-       "      <th>Hospital_type_code</th>\n",
-       "      <th>City_Code_Hospital</th>\n",
-       "      <th>Hospital_region_code</th>\n",
-       "      <th>Available Extra Rooms in Hospital</th>\n",
-       "      <th>Department</th>\n",
-       "      <th>Ward_Type</th>\n",
-       "      <th>Ward_Facility_Code</th>\n",
-       "      <th>Bed Grade</th>\n",
-       "      <th>patientid</th>\n",
-       "      <th>City_Code_Patient</th>\n",
-       "      <th>Type of Admission</th>\n",
-       "      <th>Severity of Illness</th>\n",
-       "      <th>Visitors with Patient</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Admission_Deposit</th>\n",
-       "      <th>Stay</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>c</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Z</td>\n",
-       "      <td>3</td>\n",
-       "      <td>radiotherapy</td>\n",
-       "      <td>R</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>31397</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Emergency</td>\n",
-       "      <td>Extreme</td>\n",
-       "      <td>2</td>\n",
-       "      <td>51-60</td>\n",
-       "      <td>4911.0</td>\n",
-       "      <td>0-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>c</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Z</td>\n",
-       "      <td>2</td>\n",
-       "      <td>radiotherapy</td>\n",
-       "      <td>S</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>31397</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Trauma</td>\n",
-       "      <td>Extreme</td>\n",
-       "      <td>2</td>\n",
-       "      <td>51-60</td>\n",
-       "      <td>5954.0</td>\n",
-       "      <td>41-50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>e</td>\n",
-       "      <td>1</td>\n",
-       "      <td>X</td>\n",
-       "      <td>2</td>\n",
-       "      <td>anesthesia</td>\n",
-       "      <td>S</td>\n",
-       "      <td>E</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>31397</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Trauma</td>\n",
-       "      <td>Extreme</td>\n",
-       "      <td>2</td>\n",
-       "      <td>51-60</td>\n",
-       "      <td>4745.0</td>\n",
-       "      <td>31-40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>26</td>\n",
-       "      <td>b</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>2</td>\n",
-       "      <td>radiotherapy</td>\n",
-       "      <td>R</td>\n",
-       "      <td>D</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>31397</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Trauma</td>\n",
-       "      <td>Extreme</td>\n",
-       "      <td>2</td>\n",
-       "      <td>51-60</td>\n",
-       "      <td>7272.0</td>\n",
-       "      <td>41-50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>26</td>\n",
-       "      <td>b</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>2</td>\n",
-       "      <td>radiotherapy</td>\n",
-       "      <td>S</td>\n",
-       "      <td>D</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>31397</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Trauma</td>\n",
-       "      <td>Extreme</td>\n",
-       "      <td>2</td>\n",
-       "      <td>51-60</td>\n",
-       "      <td>5558.0</td>\n",
-       "      <td>41-50</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   case_id  Hospital_code Hospital_type_code  City_Code_Hospital  \\\n",
-       "0        1              8                  c                   3   \n",
-       "1        2              2                  c                   5   \n",
-       "2        3             10                  e                   1   \n",
-       "3        4             26                  b                   2   \n",
-       "4        5             26                  b                   2   \n",
-       "\n",
-       "  Hospital_region_code  Available Extra Rooms in Hospital    Department  \\\n",
-       "0                    Z                                  3  radiotherapy   \n",
-       "1                    Z                                  2  radiotherapy   \n",
-       "2                    X                                  2    anesthesia   \n",
-       "3                    Y                                  2  radiotherapy   \n",
-       "4                    Y                                  2  radiotherapy   \n",
-       "\n",
-       "  Ward_Type Ward_Facility_Code  Bed Grade  patientid  City_Code_Patient  \\\n",
-       "0         R                  F        2.0      31397                7.0   \n",
-       "1         S                  F        2.0      31397                7.0   \n",
-       "2         S                  E        2.0      31397                7.0   \n",
-       "3         R                  D        2.0      31397                7.0   \n",
-       "4         S                  D        2.0      31397                7.0   \n",
-       "\n",
-       "  Type of Admission Severity of Illness  Visitors with Patient    Age  \\\n",
-       "0         Emergency             Extreme                      2  51-60   \n",
-       "1            Trauma             Extreme                      2  51-60   \n",
-       "2            Trauma             Extreme                      2  51-60   \n",
-       "3            Trauma             Extreme                      2  51-60   \n",
-       "4            Trauma             Extreme                      2  51-60   \n",
-       "\n",
-       "   Admission_Deposit   Stay  \n",
-       "0             4911.0   0-10  \n",
-       "1             5954.0  41-50  \n",
-       "2             4745.0  31-40  \n",
-       "3             7272.0  41-50  \n",
-       "4             5558.0  41-50  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_df.head()"
+    "# Combine for consistent preprocessing\n",
+    "train_df['is_train'] = 1 \n",
+    "test_df['is_train'] = 0\n",
+    "full_df = pd.concat([train_df, test_df], ignore_index=True)"
    ]
   }
  ],
