--- a/notebooks/hospital_analysis.ipynb
+++ b/notebooks/hospital_analysis.ipynb
@@ -76,8 +76,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e6218936",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kf/nt6wlgn90dvc9wsk7ttkqs4w0000gn/T/ipykernel_33697/1166594256.py:8: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  full_df[col].fillna(median_val, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fill missing numerical values with median\n",
+    "full_df.isnull().sum()\n",
+    "\n",
+    "num_cols = ['bed_grade', 'city_code_patient']\n",
+    "\n",
+    "for col in num_cols:\n",
+    "    median_val = full_df[col].median()\n",
+    "    full_df[col].fillna(median_val, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1f3825db",
    "metadata": {},
    "outputs": [
     {
@@ -92,9 +123,9 @@
        "department                                0\n",
        "ward_type                                 0\n",
        "ward_facility_code                        0\n",
-       "bed_grade                               148\n",
+       "bed_grade                                 0\n",
        "patientid                                 0\n",
-       "city_code_patient                      6689\n",
+       "city_code_patient                         0\n",
        "type_of_admission                         0\n",
        "severity_of_illness                       0\n",
        "visitors_with_patient                     0\n",
@@ -105,15 +136,41 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Fill missing numerical values with median\n",
-    "full_df.isnull().sum()\n",
-    "\n"
+    "full_df.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0650fba0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kf/nt6wlgn90dvc9wsk7ttkqs4w0000gn/T/ipykernel_33697/1182079955.py:5: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  full_df[col].fillna(mode_val, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat_cols = ['type_of_admission', 'severity_of_illness']\n",
+    "\n",
+    "for col in cat_cols:\n",
+    "    mode_val = full_df[col].mode()[0]\n",
+    "    full_df[col].fillna(mode_val, inplace=True)"
    ]
   }
  ],
