--- a/notebooks/hospital_analysis.ipynb
+++ b/notebooks/hospital_analysis.ipynb
@@ -172,6 +172,30 @@
     "    mode_val = full_df[col].mode()[0]\n",
     "    full_df[col].fillna(mode_val, inplace=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0558e97c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode categorical features using LabelEncoder\n",
+    "label_enc_cols = [\n",
+    "    'hospital_type_code', 'department', 'ward_type', 'ward_facility_code',\n",
+    "    'type_of_admission', 'severity_of_illness', 'age', 'hospital_region_code'\n",
+    "]\n",
+    "\n",
+    "label_encoders = {}\n",
+    "for col in label_enc_cols:\n",
+    "    le = LabelEncoder()\n",
+    "    full_df[col] = le.fit_transform(full_df[col].astype(str))\n",
+    "    label_encoders[col] = le  # Store encoders for reverse transformation if needed\n",
+    "\n",
+    "# Split back into train and test\n",
+    "clean_train_df = full_df[full_df['is_train'] == 1].drop(columns=['is_train'])\n",
+    "clean_test_df = full_df[full_df['is_train'] == 0].drop(columns=['is_train', 'stay'])  # no target in test\n"
+   ]
   }
  ],
  "metadata": {
